migration application generated with JHipster bundled (target)